# oop_labs

lab_1/: CMakeLists.txt  main.cpp  task.hpp
lab_1/test/: test01.cpp
lab_2/: CMakeLists.txt
lab_2/include/: Thirteen.hpp
lab_2/src/: Thirteen.cpp  main.cpp
lab_2/test/: test01.cpp
lab_3/: CMakeLists.txt  main.cpp
lab_3/include/: Figure.hpp  Point.hpp  Rect.hpp  Rhombus.hpp  Trapezhium.hpp
lab_3/src/: Point.cpp  Rect.cpp  Rhombus.cpp  Trapezhium.cpp
lab_4_new/: CMakeLists.txt
lab_4_new/include/: Array.hpp  Figure.hpp  Point.hpp  Rect.hpp  Rhombus.hpp  Trapezhium.hpp
lab_4_new/src/: main.cpp
lab_4_new/test/: test01.cpp
lab_5_new/: CMakeLists.txt
lab_5_new/include/: Allocator.hpp  Vector.hpp
lab_5_new/src/: main.cpp
lab_5_new/test/: test01.cpp
lab_6/: CMakeLists.txt
lab_6/include/: druid.hpp  elf.hpp  factory.hpp  knight.hpp  npc.hpp  observer.hpp  visitor.hpp
lab_6/src/: druid.cpp  elf.cpp  knight.cpp  npc.cpp
lab_6/test/: main.cpp  npc.cpp  visitor.cpp
lab_7/: CMakeLists.txt  main.cpp
lab_7/include/: druid.hpp  elf.hpp  factory.hpp  fight.hpp  knight.hpp  npc.hpp  observer.hpp  visitor.hpp
lab_7/src/: druid.cpp  elf.cpp  knight.cpp  npc.cpp
